--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
     "lucide-react": "^0.438.0",
     "next": "^14.2.21",
     "react": "^18.2.0",
@@ -40,7 +43,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.21",
+    "eslint-config-next": "^15.1.4",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
@@ -50,18 +53,13 @@
     "next-router-mock": "^0.9.0",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.49",
-    "prettier": "^2.8.8",
+    "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^4.9.5"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=0",
-      "prettier -w"
-    ],
-    "**/*.{json,css,scss,md,webmanifest}": [
-      "prettier -w"
-    ]
+    "**/*.{js,jsx,ts,tsx}": [],
+    "**/*.{json,css,scss,md,webmanifest}": []
   }
 }
