--- a/components.json
+++ b/components.json
@@ -11,12 +11,12 @@
     "prefix": ""
   },
   "aliases": {
+    "layouts": "@/layouts",
     "components": "@/components",
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks",
-    "layouts": "@/layouts"
+    "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
 }
