feat: add experience section and fix navbar background

--- a/components.json
+++ b/components.json
@@ -16,7 +16,9 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "type": "@/types",
+    "contents": "@/contents"
   },
   "iconLibrary": "lucide"
 }
