fix: add experience content

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,8 +34,8 @@ jobs:
       - name: 🔬 Lint
         run: pnpm run lint:strict
 
-      # - name: 🔎 Type check
-      #   run: pnpm run typecheck
+      - name: 🔎 Type check
+        run: pnpm run typecheck
 
       - name: 💅 Prettier check
         run: pnpm run format:check
