--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "check-all": "pnpm lint && pnpm lint:fix && pnpm typecheck && pnpm format:check"
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
