--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.7",
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.13",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
